// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`dropdown is not visible if items fit 1`] = `
.c8 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
}

.c9 {
  display: none;
  box-sizing: border-box;
  z-index: 1060;
}

.c1 {
  align-content: stretch;
  align-items: stretch;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
  display: flex;
}

.c2 {
  align-self: auto;
  flex-basis: auto;
  flex-grow: 0;
  order: 0;
  flex-shrink: 1;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c3.c3 {
  margin-right: 0.5rem;
}

.c3:focus {
  outline: none;
}

.c3[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c3+.bd-button {
  margin-top: 0.5rem;
}

.c3:active {
  background-color: #DBE3FE;
}

.c3:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3:hover:not(:active) {
  background-color: #F0F3FF;
}

.c3[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c7 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c7:focus {
  outline: none;
}

.c7[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c7+.bd-button {
  margin-top: 0.5rem;
}

.c7:active {
  background-color: #DBE3FE;
}

.c7:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c7:hover:not(:active) {
  background-color: #F0F3FF;
}

.c7[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c4 {
  align-content: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c10 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  height: 100%;
  position: relative;
  overflow: hidden;
}

.c11 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c6 {
  position: relative;
}

.c5 {
  position: absolute;
  visibility: hidden;
  z-index: -1070;
}

@media (min-width: 720px) {
  .c3+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c3 {
    width: auto;
  }
}

@media (min-width: 720px) {
  .c7+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c7 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<div
  class="c0 c1"
  role="list"
>
  <div
    class="c0 c2 "
    role="listitem"
  >
    <button
      class="c3 "
      type="button"
    >
      <span
        class="c4"
      >
        In stock
      </span>
    </button>
  </div>
  <div
    class="c0 c2 c5"
    role="listitem"
  >
    <div
      class="c0 c6"
    >
      <button
        aria-activedescendant=""
        aria-controls="_r_4_-menu"
        aria-expanded="false"
        aria-haspopup="menu"
        class="c7 bd-button"
        id="_r_4_-toggle-button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="c4"
        >
          <svg
            aria-labelledby="_r_7_"
            class="c8"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="24"
          >
            <title
              id="_r_7_"
            >
              add
            </title>
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
            />
          </svg>
        </span>
      </button>
      <div
        class="c9"
        style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 4px);"
      >
        <div
          class="c10"
        >
          <ul
            aria-labelledby="_r_4_-label"
            class="c11"
            id="_r_4_-menu"
            role="menu"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`it renders the given tabs 1`] = `
.c8 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
}

.c9 {
  display: none;
  box-sizing: border-box;
  z-index: 1060;
}

.c1 {
  align-content: stretch;
  align-items: stretch;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
  display: flex;
}

.c2 {
  align-self: auto;
  flex-basis: auto;
  flex-grow: 0;
  order: 0;
  flex-shrink: 1;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c3.c3 {
  margin-right: 0.5rem;
}

.c3:focus {
  outline: none;
}

.c3[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c3+.bd-button {
  margin-top: 0.5rem;
}

.c3:active {
  background-color: #DBE3FE;
}

.c3:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3:hover:not(:active) {
  background-color: #F0F3FF;
}

.c3[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c7 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c7:focus {
  outline: none;
}

.c7[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c7+.bd-button {
  margin-top: 0.5rem;
}

.c7:active {
  background-color: #DBE3FE;
}

.c7:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c7:hover:not(:active) {
  background-color: #F0F3FF;
}

.c7[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c4 {
  align-content: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c10 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  height: 100%;
  position: relative;
  overflow: hidden;
}

.c11 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c6 {
  position: relative;
}

.c5 {
  position: absolute;
  visibility: hidden;
  z-index: -1070;
}

@media (min-width: 720px) {
  .c3+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c3 {
    width: auto;
  }
}

@media (min-width: 720px) {
  .c7+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c7 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<div
  class="c0 c1"
  role="list"
>
  <div
    class="c0 c2 "
    role="listitem"
  >
    <button
      class="c3 "
      type="button"
    >
      <span
        class="c4"
      >
        In stock
      </span>
    </button>
  </div>
  <div
    class="c0 c2 c5"
    role="listitem"
  >
    <div
      class="c0 c6"
    >
      <button
        aria-activedescendant=""
        aria-controls="_r_0_-menu"
        aria-expanded="false"
        aria-haspopup="menu"
        class="c7 bd-button"
        id="_r_0_-toggle-button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="c4"
        >
          <svg
            aria-labelledby="_r_3_"
            class="c8"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="24"
          >
            <title
              id="_r_3_"
            >
              add
            </title>
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
            />
          </svg>
        </span>
      </button>
      <div
        class="c9"
        style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 4px);"
      >
        <div
          class="c10"
        >
          <ul
            aria-labelledby="_r_0_-label"
            class="c11"
            id="_r_0_-menu"
            role="menu"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`only the pills that fit are visible 1`] = `
.c8 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
}

.c9 {
  display: none;
  box-sizing: border-box;
  z-index: 1060;
}

.c1 {
  align-content: stretch;
  align-items: stretch;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
  display: flex;
}

.c2 {
  align-self: auto;
  flex-basis: auto;
  flex-grow: 0;
  order: 0;
  flex-shrink: 1;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c3.c3 {
  margin-right: 0.5rem;
}

.c3:focus {
  outline: none;
}

.c3[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c3+.bd-button {
  margin-top: 0.5rem;
}

.c3:active {
  background-color: #DBE3FE;
}

.c3:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3:hover:not(:active) {
  background-color: #F0F3FF;
}

.c3[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c7 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c7:focus {
  outline: none;
}

.c7[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c7+.bd-button {
  margin-top: 0.5rem;
}

.c7:active {
  background-color: #DBE3FE;
}

.c7:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c7:hover:not(:active) {
  background-color: #F0F3FF;
}

.c7[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c4 {
  align-content: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c10 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  height: 100%;
  position: relative;
  overflow: hidden;
}

.c11 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c6 {
  position: relative;
}

.c5 {
  position: absolute;
  visibility: hidden;
  z-index: -1070;
}

@media (min-width: 720px) {
  .c3+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c3 {
    width: auto;
  }
}

@media (min-width: 720px) {
  .c7+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c7 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<div
  class="c0 c1"
  role="list"
>
  <div
    class="c0 c2 "
    role="listitem"
  >
    <button
      class="c3 "
      type="button"
    >
      <span
        class="c4"
      >
        In stock
      </span>
    </button>
  </div>
  <div
    class="c0 c2 c5"
    role="listitem"
  >
    <button
      class="c3 "
      disabled=""
      type="button"
    >
      <span
        class="c4"
      >
        Filter 2
      </span>
    </button>
  </div>
  <div
    class="c0 c2 c5"
    role="listitem"
  >
    <button
      class="c3 "
      disabled=""
      type="button"
    >
      <span
        class="c4"
      >
        Filter 3
      </span>
    </button>
  </div>
  <div
    class="c0 c2 "
    role="listitem"
  >
    <div
      class="c0 c6"
    >
      <button
        aria-activedescendant=""
        aria-controls="_r_g_-menu"
        aria-expanded="false"
        aria-haspopup="menu"
        class="c7 bd-button"
        id="_r_g_-toggle-button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="c4"
        >
          <svg
            aria-labelledby="_r_j_"
            class="c8"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="24"
          >
            <title
              id="_r_j_"
            >
              add
            </title>
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
            />
          </svg>
        </span>
      </button>
      <div
        class="c9"
        style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 4px);"
      >
        <div
          class="c10"
        >
          <ul
            aria-labelledby="_r_g_-label"
            class="c11"
            id="_r_g_-menu"
            role="menu"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`only the pills that fit are visible 2 1`] = `
.c8 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
}

.c9 {
  display: none;
  box-sizing: border-box;
  z-index: 1060;
}

.c1 {
  align-content: stretch;
  align-items: stretch;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
  display: flex;
}

.c2 {
  align-self: auto;
  flex-basis: auto;
  flex-grow: 0;
  order: 0;
  flex-shrink: 1;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c3.c3 {
  margin-right: 0.5rem;
}

.c3:focus {
  outline: none;
}

.c3[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c3+.bd-button {
  margin-top: 0.5rem;
}

.c3:active {
  background-color: #DBE3FE;
}

.c3:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3:hover:not(:active) {
  background-color: #F0F3FF;
}

.c3[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c7 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c7:focus {
  outline: none;
}

.c7[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c7+.bd-button {
  margin-top: 0.5rem;
}

.c7:active {
  background-color: #DBE3FE;
}

.c7:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c7:hover:not(:active) {
  background-color: #F0F3FF;
}

.c7[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c4 {
  align-content: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c10 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  height: 100%;
  position: relative;
  overflow: hidden;
}

.c11 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c6 {
  position: relative;
}

.c5 {
  position: absolute;
  visibility: hidden;
  z-index: -1070;
}

@media (min-width: 720px) {
  .c3+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c3 {
    width: auto;
  }
}

@media (min-width: 720px) {
  .c7+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c7 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<div
  class="c0 c1"
  role="list"
>
  <div
    class="c0 c2 "
    role="listitem"
  >
    <button
      class="c3 "
      type="button"
    >
      <span
        class="c4"
      >
        In stock
      </span>
    </button>
  </div>
  <div
    class="c0 c2 "
    role="listitem"
  >
    <button
      class="c3 "
      type="button"
    >
      <span
        class="c4"
      >
        Filter 2
      </span>
    </button>
  </div>
  <div
    class="c0 c2 c5"
    role="listitem"
  >
    <button
      class="c3 "
      disabled=""
      type="button"
    >
      <span
        class="c4"
      >
        Filter 3
      </span>
    </button>
  </div>
  <div
    class="c0 c2 "
    role="listitem"
  >
    <div
      class="c0 c6"
    >
      <button
        aria-activedescendant=""
        aria-controls="_r_k_-menu"
        aria-expanded="false"
        aria-haspopup="menu"
        class="c7 bd-button"
        id="_r_k_-toggle-button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="c4"
        >
          <svg
            aria-labelledby="_r_n_"
            class="c8"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="24"
          >
            <title
              id="_r_n_"
            >
              add
            </title>
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
            />
          </svg>
        </span>
      </button>
      <div
        class="c9"
        style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 4px);"
      >
        <div
          class="c10"
        >
          <ul
            aria-labelledby="_r_k_-label"
            class="c11"
            id="_r_k_-menu"
            role="menu"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders all the filters if they fit 1`] = `
.c8 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
}

.c9 {
  display: none;
  box-sizing: border-box;
  z-index: 1060;
}

.c1 {
  align-content: stretch;
  align-items: stretch;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
  display: flex;
}

.c2 {
  align-self: auto;
  flex-basis: auto;
  flex-grow: 0;
  order: 0;
  flex-shrink: 1;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c3.c3 {
  margin-right: 0.5rem;
}

.c3:focus {
  outline: none;
}

.c3[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c3+.bd-button {
  margin-top: 0.5rem;
}

.c3:active {
  background-color: #DBE3FE;
}

.c3:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3:hover:not(:active) {
  background-color: #F0F3FF;
}

.c3[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c7 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c7:focus {
  outline: none;
}

.c7[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c7+.bd-button {
  margin-top: 0.5rem;
}

.c7:active {
  background-color: #DBE3FE;
}

.c7:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c7:hover:not(:active) {
  background-color: #F0F3FF;
}

.c7[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c4 {
  align-content: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c10 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  height: 100%;
  position: relative;
  overflow: hidden;
}

.c11 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c6 {
  position: relative;
}

.c5 {
  position: absolute;
  visibility: hidden;
  z-index: -1070;
}

@media (min-width: 720px) {
  .c3+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c3 {
    width: auto;
  }
}

@media (min-width: 720px) {
  .c7+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c7 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<div
  class="c0 c1"
  role="list"
>
  <div
    class="c0 c2 "
    role="listitem"
  >
    <button
      class="c3 "
      type="button"
    >
      <span
        class="c4"
      >
        In stock
      </span>
    </button>
  </div>
  <div
    class="c0 c2 "
    role="listitem"
  >
    <button
      class="c3 "
      type="button"
    >
      <span
        class="c4"
      >
        Filter 2
      </span>
    </button>
  </div>
  <div
    class="c0 c2 "
    role="listitem"
  >
    <button
      class="c3 "
      type="button"
    >
      <span
        class="c4"
      >
        Filter 3
      </span>
    </button>
  </div>
  <div
    class="c0 c2 c5"
    role="listitem"
  >
    <div
      class="c0 c6"
    >
      <button
        aria-activedescendant=""
        aria-controls="_r_c_-menu"
        aria-expanded="false"
        aria-haspopup="menu"
        class="c7 bd-button"
        id="_r_c_-toggle-button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="c4"
        >
          <svg
            aria-labelledby="_r_f_"
            class="c8"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="24"
          >
            <title
              id="_r_f_"
            >
              add
            </title>
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
            />
          </svg>
        </span>
      </button>
      <div
        class="c9"
        style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 4px);"
      >
        <div
          class="c10"
        >
          <ul
            aria-labelledby="_r_c_-label"
            class="c11"
            id="_r_c_-menu"
            role="menu"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders dropdown if items do not fit 1`] = `
.c8 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
}

.c9 {
  display: none;
  box-sizing: border-box;
  z-index: 1060;
}

.c1 {
  align-content: stretch;
  align-items: stretch;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
  display: flex;
}

.c2 {
  align-self: auto;
  flex-basis: auto;
  flex-grow: 0;
  order: 0;
  flex-shrink: 1;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c3.c3 {
  margin-right: 0.5rem;
}

.c3:focus {
  outline: none;
}

.c3[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c3+.bd-button {
  margin-top: 0.5rem;
}

.c3:active {
  background-color: #DBE3FE;
}

.c3:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3:hover:not(:active) {
  background-color: #F0F3FF;
}

.c3[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c7 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c7:focus {
  outline: none;
}

.c7[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c7+.bd-button {
  margin-top: 0.5rem;
}

.c7:active {
  background-color: #DBE3FE;
}

.c7:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c7:hover:not(:active) {
  background-color: #F0F3FF;
}

.c7[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c4 {
  align-content: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c10 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  height: 100%;
  position: relative;
  overflow: hidden;
}

.c11 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c6 {
  position: relative;
}

.c5 {
  position: absolute;
  visibility: hidden;
  z-index: -1070;
}

@media (min-width: 720px) {
  .c3+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c3 {
    width: auto;
  }
}

@media (min-width: 720px) {
  .c7+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c7 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<div
  class="c0 c1"
  role="list"
>
  <div
    class="c0 c2 "
    role="listitem"
  >
    <button
      class="c3 "
      type="button"
    >
      <span
        class="c4"
      >
        In stock
      </span>
    </button>
  </div>
  <div
    class="c0 c2 c5"
    role="listitem"
  >
    <button
      class="c3 "
      disabled=""
      type="button"
    >
      <span
        class="c4"
      >
        Long filter name
      </span>
    </button>
  </div>
  <div
    class="c0 c2 "
    role="listitem"
  >
    <div
      class="c0 c6"
    >
      <button
        aria-activedescendant=""
        aria-controls="_r_8_-menu"
        aria-expanded="false"
        aria-haspopup="menu"
        class="c7 bd-button"
        id="_r_8_-toggle-button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="c4"
        >
          <svg
            aria-labelledby="_r_b_"
            class="c8"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="24"
          >
            <title
              id="_r_b_"
            >
              add
            </title>
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
            />
          </svg>
        </span>
      </button>
      <div
        class="c9"
        style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 4px);"
      >
        <div
          class="c10"
        >
          <ul
            aria-labelledby="_r_8_-label"
            class="c11"
            id="_r_8_-menu"
            role="menu"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
